try use gcc7.2 for coverage test

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,16 +44,14 @@ matrix:
       env:
         - MATRIX_EVAL="CC=clang && CXX=clang++ && CMAKE_BUILD_TYPE=Release"
 
-    # Linux x GCC4.9 x Debug (for coverage)
+    # Linux x GCC7.2 x Debug (for coverage)
     - os: linux
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
       env:
-         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && CMAKE_BUILD_TYPE=Debug && COVERAGE=1"
+         - MATRIX_EVAL="sudo add-apt-repository ppa:jonathonf/gcc-7.1 && sudo apt-get update && sudo apt-get install gcc-7 g++-7 && CC=gcc-7 && CXX=g++-7 && CMAKE_BUILD_TYPE=Debug && COVERAGE=1"
 
     # Linux x GCC4.9 x Release
     - os: linux
@@ -86,10 +84,8 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
       env:
-         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && CMAKE_BUILD_TYPE=Debug && COVERAGE=1"
+         - MATRIX_EVAL="sudo add-apt-repository ppa:jonathonf/gcc-7.1 && sudo apt-get update && sudo apt-get install gcc-7 g++-7 && CC=gcc-7 && CXX=g++-7 && CMAKE_BUILD_TYPE=Debug && COVERAGE=1"
 
   # allow for fast finish, even if the optional coverage build is not done yet
   fast_finish: true
